--- a/src/client/titleBar/titleBar.less
+++ b/src/client/titleBar/titleBar.less
@@ -21,12 +21,13 @@ div.title-bar {
     content: '';
     position: absolute;
     top: -200px;
-    left: 0;
-    right: -40%;
+    width: 2640px;
+    right: -760px;
     bottom: 100px;
     background-color: rgb(48, 176, 234);
     transform: rotate(20deg);
     box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.05);
+    z-index: 1;
   }
 
   > div.username-container {
@@ -55,7 +56,7 @@ div.title-bar {
   > div.buttons {
     display: flex;
     flex: none;
-    z-index: 1;
+    z-index: 2;
 
     > div.round-button {
       &.charity-balance {
